AStart/src/maths_parser.output
Nonterminals useless in grammar

   ASSIGN_STATEMENT


Terminals unused in grammar

   T_LSQBRACKET
   T_RSQBRACKET
   T_LTRIBRACKET
   T_RTRIBRACKET
   T_DOT
   T_COMMA
   T_COLON


State 60 conflicts: 2 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: MAIN_BODY

    2 MAIN_BODY: FUNCTION_LIST

    3 FUNCTION_LIST: DEC_FUNCTION FUNCTION_LIST
    4              | DEC_FUNCTION

    5 DEC_FUNCTION: TYPE T_ID T_LBRACKET T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

    6 TYPE: T_INT
    7     | T_DOUBLE
    8     | T_STRING
    9     | T_VOID
   10     | T_BOOL

   11 BODY: STATEMENT BODY
   12     | STATEMENT

   13 STATEMENT: RETURN_STATEMENT
   14          | DECLARE_VAR
   15          | FUNCTION

   16 RETURN_STATEMENT: T_RETURN EXPR T_SEMICOLON

   17 DECLARE_VAR: TYPE T_ID T_ASSIGN EXPR T_SEMICOLON
   18            | TYPE T_ID T_SEMICOLON

   19 FUNCTION: T_ID T_LBRACKET T_RBRACKET T_SEMICOLON

   20 EXPR: TERM
   21     | EXPR T_PLUS TERM
   22     | EXPR T_MINUS TERM

   23 TERM: FACTOR
   24     | TERM T_TIMES FACTOR
   25     | TERM T_DIVIDE FACTOR
   26     | FACTOR T_EXPONENT TERM

   27 FACTOR: T_NUMBER
   28       | T_LBRACKET EXPR T_RBRACKET
   29       | T_ID
   30       | T_LOG T_LBRACKET EXPR T_RBRACKET
   31       | T_EXP T_LBRACKET EXPR T_RBRACKET
   32       | T_SQRT T_LBRACKET EXPR T_RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
T_LSQBRACKET (258)
T_RSQBRACKET (259)
T_LCUBRACKET (260) 5
T_RCUBRACKET (261) 5
T_LTRIBRACKET (262)
T_RTRIBRACKET (263)
T_LBRACKET (264) 5 19 28 30 31 32
T_RBRACKET (265) 5 19 28 30 31 32
T_ASSIGN (266) 17
T_DOT (267)
T_COMMA (268)
T_COLON (269)
T_SEMICOLON (270) 16 17 18 19
T_INT (271) 6
T_DOUBLE (272) 7
T_STRING (273) 8
T_BOOL (274) 10
T_VOID (275) 9
T_TIMES (276) 24
T_DIVIDE (277) 25
T_PLUS (278) 21
T_MINUS (279) 22
T_EXPONENT (280) 26
T_LOG (281) 30
T_EXP (282) 31
T_SQRT (283) 32
T_NUMBER (284) 27
T_ID (285) 5 17 18 19 29
T_RETURN (286) 16


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
ROOT (33)
    on left: 1, on right: 0
MAIN_BODY (34)
    on left: 2, on right: 1
FUNCTION_LIST (35)
    on left: 3 4, on right: 2 3
DEC_FUNCTION (36)
    on left: 5, on right: 3 4
TYPE (37)
    on left: 6 7 8 9 10, on right: 5 17 18
BODY (38)
    on left: 11 12, on right: 5 11
STATEMENT (39)
    on left: 13 14 15, on right: 11 12
RETURN_STATEMENT (40)
    on left: 16, on right: 13
DECLARE_VAR (41)
    on left: 17 18, on right: 14
FUNCTION (42)
    on left: 19, on right: 15
EXPR (43)
    on left: 20 21 22, on right: 16 17 21 22 28 30 31 32
TERM (44)
    on left: 23 24 25 26, on right: 20 21 22 24 25 26
FACTOR (45)
    on left: 27 28 29 30 31 32, on right: 23 24 25 26


State 0

    0 $accept: . ROOT $end

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5

    ROOT           go to state 6
    MAIN_BODY      go to state 7
    FUNCTION_LIST  go to state 8
    DEC_FUNCTION   go to state 9
    TYPE           go to state 10


State 1

    6 TYPE: T_INT .

    $default  reduce using rule 6 (TYPE)


State 2

    7 TYPE: T_DOUBLE .

    $default  reduce using rule 7 (TYPE)


State 3

    8 TYPE: T_STRING .

    $default  reduce using rule 8 (TYPE)


State 4

   10 TYPE: T_BOOL .

    $default  reduce using rule 10 (TYPE)


State 5

    9 TYPE: T_VOID .

    $default  reduce using rule 9 (TYPE)


State 6

    0 $accept: ROOT . $end

    $end  shift, and go to state 11


State 7

    1 ROOT: MAIN_BODY .

    $default  reduce using rule 1 (ROOT)


State 8

    2 MAIN_BODY: FUNCTION_LIST .

    $default  reduce using rule 2 (MAIN_BODY)


State 9

    3 FUNCTION_LIST: DEC_FUNCTION . FUNCTION_LIST
    4              | DEC_FUNCTION .

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5

    $default  reduce using rule 4 (FUNCTION_LIST)

    FUNCTION_LIST  go to state 12
    DEC_FUNCTION   go to state 9
    TYPE           go to state 10


State 10

    5 DEC_FUNCTION: TYPE . T_ID T_LBRACKET T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

    T_ID  shift, and go to state 13


State 11

    0 $accept: ROOT $end .

    $default  accept


State 12

    3 FUNCTION_LIST: DEC_FUNCTION FUNCTION_LIST .

    $default  reduce using rule 3 (FUNCTION_LIST)


State 13

    5 DEC_FUNCTION: TYPE T_ID . T_LBRACKET T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

    T_LBRACKET  shift, and go to state 14


State 14

    5 DEC_FUNCTION: TYPE T_ID T_LBRACKET . T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

    T_RBRACKET  shift, and go to state 15


State 15

    5 DEC_FUNCTION: TYPE T_ID T_LBRACKET T_RBRACKET . T_LCUBRACKET BODY T_RCUBRACKET

    T_LCUBRACKET  shift, and go to state 16


State 16

    5 DEC_FUNCTION: TYPE T_ID T_LBRACKET T_RBRACKET T_LCUBRACKET . BODY T_RCUBRACKET

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5
    T_ID      shift, and go to state 17
    T_RETURN  shift, and go to state 18

    TYPE              go to state 19
    BODY              go to state 20
    STATEMENT         go to state 21
    RETURN_STATEMENT  go to state 22
    DECLARE_VAR       go to state 23
    FUNCTION          go to state 24


State 17

   19 FUNCTION: T_ID . T_LBRACKET T_RBRACKET T_SEMICOLON

    T_LBRACKET  shift, and go to state 25


State 18

   16 RETURN_STATEMENT: T_RETURN . EXPR T_SEMICOLON

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    EXPR    go to state 32
    TERM    go to state 33
    FACTOR  go to state 34


State 19

   17 DECLARE_VAR: TYPE . T_ID T_ASSIGN EXPR T_SEMICOLON
   18            | TYPE . T_ID T_SEMICOLON

    T_ID  shift, and go to state 35


State 20

    5 DEC_FUNCTION: TYPE T_ID T_LBRACKET T_RBRACKET T_LCUBRACKET BODY . T_RCUBRACKET

    T_RCUBRACKET  shift, and go to state 36


State 21

   11 BODY: STATEMENT . BODY
   12     | STATEMENT .

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5
    T_ID      shift, and go to state 17
    T_RETURN  shift, and go to state 18

    $default  reduce using rule 12 (BODY)

    TYPE              go to state 19
    BODY              go to state 37
    STATEMENT         go to state 21
    RETURN_STATEMENT  go to state 22
    DECLARE_VAR       go to state 23
    FUNCTION          go to state 24


State 22

   13 STATEMENT: RETURN_STATEMENT .

    $default  reduce using rule 13 (STATEMENT)


State 23

   14 STATEMENT: DECLARE_VAR .

    $default  reduce using rule 14 (STATEMENT)


State 24

   15 STATEMENT: FUNCTION .

    $default  reduce using rule 15 (STATEMENT)


State 25

   19 FUNCTION: T_ID T_LBRACKET . T_RBRACKET T_SEMICOLON

    T_RBRACKET  shift, and go to state 38


State 26

   28 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    EXPR    go to state 39
    TERM    go to state 33
    FACTOR  go to state 34


State 27

   30 FACTOR: T_LOG . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 40


State 28

   31 FACTOR: T_EXP . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 41


State 29

   32 FACTOR: T_SQRT . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 42


State 30

   27 FACTOR: T_NUMBER .

    $default  reduce using rule 27 (FACTOR)


State 31

   29 FACTOR: T_ID .

    $default  reduce using rule 29 (FACTOR)


State 32

   16 RETURN_STATEMENT: T_RETURN EXPR . T_SEMICOLON
   21 EXPR: EXPR . T_PLUS TERM
   22     | EXPR . T_MINUS TERM

    T_SEMICOLON  shift, and go to state 43
    T_PLUS       shift, and go to state 44
    T_MINUS      shift, and go to state 45


State 33

   20 EXPR: TERM .
   24 TERM: TERM . T_TIMES FACTOR
   25     | TERM . T_DIVIDE FACTOR

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    $default  reduce using rule 20 (EXPR)


State 34

   23 TERM: FACTOR .
   26     | FACTOR . T_EXPONENT TERM

    T_EXPONENT  shift, and go to state 48

    $default  reduce using rule 23 (TERM)


State 35

   17 DECLARE_VAR: TYPE T_ID . T_ASSIGN EXPR T_SEMICOLON
   18            | TYPE T_ID . T_SEMICOLON

    T_ASSIGN     shift, and go to state 49
    T_SEMICOLON  shift, and go to state 50


State 36

    5 DEC_FUNCTION: TYPE T_ID T_LBRACKET T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET .

    $default  reduce using rule 5 (DEC_FUNCTION)


State 37

   11 BODY: STATEMENT BODY .

    $default  reduce using rule 11 (BODY)


State 38

   19 FUNCTION: T_ID T_LBRACKET T_RBRACKET . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 51


State 39

   21 EXPR: EXPR . T_PLUS TERM
   22     | EXPR . T_MINUS TERM
   28 FACTOR: T_LBRACKET EXPR . T_RBRACKET

    T_RBRACKET  shift, and go to state 52
    T_PLUS      shift, and go to state 44
    T_MINUS     shift, and go to state 45


State 40

   30 FACTOR: T_LOG T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    EXPR    go to state 53
    TERM    go to state 33
    FACTOR  go to state 34


State 41

   31 FACTOR: T_EXP T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    EXPR    go to state 54
    TERM    go to state 33
    FACTOR  go to state 34


State 42

   32 FACTOR: T_SQRT T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    EXPR    go to state 55
    TERM    go to state 33
    FACTOR  go to state 34


State 43

   16 RETURN_STATEMENT: T_RETURN EXPR T_SEMICOLON .

    $default  reduce using rule 16 (RETURN_STATEMENT)


State 44

   21 EXPR: EXPR T_PLUS . TERM

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    TERM    go to state 56
    FACTOR  go to state 34


State 45

   22 EXPR: EXPR T_MINUS . TERM

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    TERM    go to state 57
    FACTOR  go to state 34


State 46

   24 TERM: TERM T_TIMES . FACTOR

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    FACTOR  go to state 58


State 47

   25 TERM: TERM T_DIVIDE . FACTOR

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    FACTOR  go to state 59


State 48

   26 TERM: FACTOR T_EXPONENT . TERM

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    TERM    go to state 60
    FACTOR  go to state 34


State 49

   17 DECLARE_VAR: TYPE T_ID T_ASSIGN . EXPR T_SEMICOLON

    T_LBRACKET  shift, and go to state 26
    T_LOG       shift, and go to state 27
    T_EXP       shift, and go to state 28
    T_SQRT      shift, and go to state 29
    T_NUMBER    shift, and go to state 30
    T_ID        shift, and go to state 31

    EXPR    go to state 61
    TERM    go to state 33
    FACTOR  go to state 34


State 50

   18 DECLARE_VAR: TYPE T_ID T_SEMICOLON .

    $default  reduce using rule 18 (DECLARE_VAR)


State 51

   19 FUNCTION: T_ID T_LBRACKET T_RBRACKET T_SEMICOLON .

    $default  reduce using rule 19 (FUNCTION)


State 52

   28 FACTOR: T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 28 (FACTOR)


State 53

   21 EXPR: EXPR . T_PLUS TERM
   22     | EXPR . T_MINUS TERM
   30 FACTOR: T_LOG T_LBRACKET EXPR . T_RBRACKET

    T_RBRACKET  shift, and go to state 62
    T_PLUS      shift, and go to state 44
    T_MINUS     shift, and go to state 45


State 54

   21 EXPR: EXPR . T_PLUS TERM
   22     | EXPR . T_MINUS TERM
   31 FACTOR: T_EXP T_LBRACKET EXPR . T_RBRACKET

    T_RBRACKET  shift, and go to state 63
    T_PLUS      shift, and go to state 44
    T_MINUS     shift, and go to state 45


State 55

   21 EXPR: EXPR . T_PLUS TERM
   22     | EXPR . T_MINUS TERM
   32 FACTOR: T_SQRT T_LBRACKET EXPR . T_RBRACKET

    T_RBRACKET  shift, and go to state 64
    T_PLUS      shift, and go to state 44
    T_MINUS     shift, and go to state 45


State 56

   21 EXPR: EXPR T_PLUS TERM .
   24 TERM: TERM . T_TIMES FACTOR
   25     | TERM . T_DIVIDE FACTOR

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    $default  reduce using rule 21 (EXPR)


State 57

   22 EXPR: EXPR T_MINUS TERM .
   24 TERM: TERM . T_TIMES FACTOR
   25     | TERM . T_DIVIDE FACTOR

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    $default  reduce using rule 22 (EXPR)


State 58

   24 TERM: TERM T_TIMES FACTOR .

    $default  reduce using rule 24 (TERM)


State 59

   25 TERM: TERM T_DIVIDE FACTOR .

    $default  reduce using rule 25 (TERM)


State 60

   24 TERM: TERM . T_TIMES FACTOR
   25     | TERM . T_DIVIDE FACTOR
   26     | FACTOR T_EXPONENT TERM .

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    T_TIMES   [reduce using rule 26 (TERM)]
    T_DIVIDE  [reduce using rule 26 (TERM)]
    $default  reduce using rule 26 (TERM)


State 61

   17 DECLARE_VAR: TYPE T_ID T_ASSIGN EXPR . T_SEMICOLON
   21 EXPR: EXPR . T_PLUS TERM
   22     | EXPR . T_MINUS TERM

    T_SEMICOLON  shift, and go to state 65
    T_PLUS       shift, and go to state 44
    T_MINUS      shift, and go to state 45


State 62

   30 FACTOR: T_LOG T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 30 (FACTOR)


State 63

   31 FACTOR: T_EXP T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 31 (FACTOR)


State 64

   32 FACTOR: T_SQRT T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 32 (FACTOR)


State 65

   17 DECLARE_VAR: TYPE T_ID T_ASSIGN EXPR T_SEMICOLON .

    $default  reduce using rule 17 (DECLARE_VAR)
